--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 			box-shadow: 0 0 0 3px #EEE;
 			font-family: monospace;
-			font-size: 15pt;
+
+			overflow: hidden;
 		}
 
 		.top    {height: 5%;}
@@ -27,30 +28,28 @@
 
 		#sidebar > div {
 			width: calc(100% - 18px);
-			height: 15pt;
+			height: 12pt;
 			margin: 9px;
 			margin-bottom: 0;
+			line-height: 12pt;
 		}
 
 		#sidebar > div > span {
-			width: calc(50% - 9px);
-			padding-left: 3px;
-			padding-right: 6px;
-			box-shadow: none;
+			width: calc(50% - 3px - 12pt);
+			padding-right: 3px;
+			float: left;
+			text-align: right;
 		}
 
-		#sidebar > div > span > input[type = "checkbox"] {
+		#sidebar > div > input[type = "checkbox"] {
 			width: 12pt;
-			height: 15pt;
-			float: right;
-			box-shadow: none;
+			height: 12pt;
 		}
 
 		#sidebar > div > input[type = "text"] {
 			width: calc(50% - 3px);
-			padding-left: 3px;
+			margin-left: 3px;
 			float: right;
-			box-shadow: 0 0 0 3px #DDD;
 		}
 	</style>
 </head>
@@ -65,11 +64,11 @@
 	<div id="sidebar" class="bottom left"></div>
 	<canvas id="canvas" class="bottom right" tabindex="-1"></canvas>
 
+	<script src="data.js"></script>
+	<script src="elements.js"></script>
+	<script src="input.js"></script>
+	<script src="paths.js"></script>
 	<script src="points.js"></script>
-
-	<script src="canvas.js"></script>
-	<script src="tools.js"></script>
-	<script src="sidebar.js"></script>
 
 	<script src="index.js"></script>
 </body>
